# Scripts

./: README.md
CPUStatus/: README.md  plot.py  script.sh
CommonFileCreator/: README.md  script.sh
CommonFileCreator/samples/PlantUml/: data_class.puml
CommonFileCreator/samples/cmake_cpp_lib/: .gitignore  CMakeLists.txt  README.md  test.sh
CommonFileCreator/samples/cmake_cpp_lib/General/: CMakeLists.txt
CommonFileCreator/samples/cmake_cpp_lib/Test/: CMakeLists.txt
CommonFileCreator/samples/cmake_cpp_lib/Test/include/: test_main.hpp
CommonFileCreator/samples/cmake_cpp_lib/Test/source/: test_main.cpp
CommonFileCreator/samples/cmake_cpp_lib/cmake/: CodeCoverage.cmake
HeadphonesConnection/: README.md  run_script.sh  script.sh
OneLiners/: README.md  begin.sh
Timer/: timer.sh
